# bitrix-push-workspace

./: .gitignore  Cargo.toml  Dockerfile  README.md  push_config.toml
bitrix-actix-protobuf/: Cargo.toml
bitrix-actix-protobuf/src/: lib.rs
bitrix-channels/: Cargo.toml
bitrix-channels/src/: lib.rs
bitrix-server/: Cargo.toml  _build.rs
bitrix-server/proto/: license.proto  notification.proto  receiver.proto  request.proto  response.proto  sender.proto
bitrix-server/src/: app.rs  items.rs  main.rs  message.rs  server.rs  session.rs  settings.rs  utils.rs
