[package]
name = "bitrix_server"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "push-server"
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-broker = "0.4.2"
actix-files = "0.6"
actix-web = { workspace = true }
actix-web-actors = "4.1"
bytes = "1.2"
prost ="0.11"
prost-types = "0.10"

config = { version = "0.13.1", default-features = false, features = ["toml"] }
bitrix_channels = { path = "../bitrix-channels" }
bitrix_actix_protobuf = { path = "../bitrix-actix-protobuf" }
futures-util = { workspace = true }
env_logger = "0.9"
log = "0.4"
rand = "0.8"
actix-protobuf = "0.9.0"
prost-derive = "0.11.0"
serde = { version = "1.0.144", features = ["derive"] }
sha1 = "0.10.5"
hmac = "0.12.1"

[build-dependencies]
actix-web = { version = "4", default_features = false, features = ["macros"] }
prost = { version = "0.11", default_features = false, features = ["prost-derive"] }
prost-build = "0.11"